[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-antd"
version = "0.0.12"
description = "Reflex custom component antd"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "seewind", email = "seewindcn@gmail.com" }]
keywords = [
    "reflex",
    "reflex-custom-components",
    "ant-design", "antd",
]

dependencies = [
    "reflex>=0.4.2"
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/seewindcn/reflex-antd"
homepage = "https://github.com/seewindcn/reflex-antd"
source = "https://github.com/seewindcn/reflex-antd"

[project.optional-dependencies]
dev = ["build", "twine"]






[tool.setuptools.packages.find]
where = ["custom_components"]
